2020-06-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* SEMI-MK: Assume Emacs 24 or later.

2020-06-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Use following-char and preceding-char instead of char-after and
	char-before for the current point.

	* mime-signature.el (mime-edit-signature-insert-plain)
	(mime-edit-insert-signature): Likewise.

	* mime-vcard.el (mime-display-text/vcard): Likewise.

	* mime-view.el (mime-display-text/plain-flowed)
	(mime-display-text/plain, mime-display-entity): Likewise.

2020-06-02  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Use invisibility feature directly.

	* mime-edit.el: Don't require invisible.el.
	(turn-on-mime-edit): Don't call enable-invisible function.

2020-06-02  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Strip use of function wrapping lambda.

	* mail-mime-setup.el (mime-edit-split-message-sender-alist): Likewise.

	* mime-edit.el (mime-edit-decode-single-part-in-buffer)
	(mime-edit-split-and-send, replace-space-with-underline)
	(mime-prompt-for-parameter): Likewise.

	* mime-play.el (mime-echo-window-height, mime-play-entity): Likewise.

2020-06-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-header-hook): Define explicitly.

2020-05-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-vcard.el: Suppress byte compiler warning.

2020-05-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-bbdb.el: Removed.

	* SEMI-ELS: Likewise.

	* signature.el: Likewise.

2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Use lexical binding.

	* mail-mime-setup.el: Likewise.

	* mime-bbdb.el: Likewise.

	* mime-edit.el: Likewise.

	* mime-image.el: Likewise.

	* mime-mac.el: Likewise.

	* mime-partial.el: Likewise.

	* mime-pgp.el: Likewise.

	* mime-play.el: Likewise.

	* mime-setup.el: Likewise.

	* mime-shr.el: Likewise.

	* mime-signature.el: Likewise.

	* mime-vcard.el: Likewise.

	* mime-view.el: Likewise.

	* mime-w3.el: Likewise.

	* semi-def.el: Likewise.

	* semi-setup.el: Likewise.

	* signature.el: Likewise.
