@@ -1,5 +1,9 @@
 2020-06-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
+	* mime-edit.el: Require invisible.el explicitly.
+
+2020-06-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
 	* SEMI-MK: Assume Emacs 24 or later.
 
 2020-06-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
